Pasted from local repo

--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,14 @@ uuid = "3978d399-9848-4322-9a48-ca26b732c7dc"
 authors = ["Giancarlo A. Antonucci"]
 version = "0.1.0"
 
+[deps]
+ArrowMacros = "46a4b217-d1c8-4502-9c1a-7bf73a71908c"
+BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NSDEBase = "5aa61ba9-7752-4810-b2ec-484f26c3f007"
+RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+
 [compat]
 julia = "1"
 
