--- a/Project.toml
+++ b/Project.toml
@@ -13,8 +13,8 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 [compat]
 ArrowMacros = "0.1"
 NSDEBase = "0.2"
-RecipesBase = "1"
-Reexport = "1"
+RecipesBase = "0.7.0, 0.8, 1.0"
+Reexport = "0.2, 1.0"
 julia = "1"
 
 [extras]
