--- a/Project.toml
+++ b/Project.toml
@@ -8,13 +8,13 @@ ArrowMacros = "46a4b217-d1c8-4502-9c1a-7bf73a71908c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NSDEBase = "5aa61ba9-7752-4810-b2ec-484f26c3f007"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
-Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+# Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
 ArrowMacros = "0.1"
 NSDEBase = "0.2"
 RecipesBase = "0.7.0, 0.8, 1.0"
-Reexport = "0.2, 1.0"
+# Reexport = "0.2, 1.0"
 julia = "1"
 
 [extras]
