--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "RungeKutta"
+name = "NSDERungeKutta"
 uuid = "3978d399-9848-4322-9a48-ca26b732c7dc"
 authors = ["Giancarlo A. Antonucci"]
 version = "0.1.0"
