--- a/Project.toml
+++ b/Project.toml
@@ -16,7 +16,7 @@ ArrowMacros = "0.1, 0.2"
 NSDEBase = "0.2"
 RecipesBase = "0.7.0, 0.8, 1.0"
 Reexport = "0.2, 1.0"
-julia = "1"
+julia = "1.10, 1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
