--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,6 +2,7 @@ name: CI
 on:
   - push
   - pull_request
+
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
@@ -11,6 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         version:
+          - '1.10'
           - '1'
         os:
           - ubuntu-latest
@@ -19,25 +21,44 @@ jobs:
         arch:
           - x64
         experimental: [false]
+    
     steps:
-      - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@v1
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
+      - name: Set up Julia
+        uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-      - uses: actions/cache@v1
+      
+      - name: Cache dependencies
+        uses: actions/cache@v4
         env:
           cache-name: cache-artifacts
         with:
-          path: ~/.julia/artifacts
-          key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
+          path: |
+            ~/.julia/artifacts
+            ~/.julia/compiled
+          key: ${{ runner.os }}-julia-${{ env.cache-name }}-${{ hashFiles('**/Project.toml') }}
           restore-keys: |
-            ${{ runner.os }}-test-${{ env.cache-name }}-
-            ${{ runner.os }}-test-
+            ${{ runner.os }}-julia-${{ env.cache-name }}-
+            ${{ runner.os }}-julia-
             ${{ runner.os }}-
-      - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-runtest@v1
-      - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v1
+      
+      - name: Instantiate environment
+        run: julia --project=@. -e 'using Pkg; Pkg.instantiate()'
+      
+      - name: Build package
+        uses: julia-actions/julia-buildpkg@v1
+      
+      - name: Run tests
+        uses: julia-actions/julia-runtest@v1
+
+      - name: Process code coverage
+        uses: julia-actions/julia-processcoverage@v1
         with:
-          file: lcov.info
+          directories: src
+      
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
