--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -10,11 +10,15 @@ jobs:
     name: Documenter
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@v1
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      
+      - name: Set up Julia
+        uses: julia-actions/setup-julia@v1
         with:
           version: '1'
           show-versioninfo: true
+      
       - name: Install dependencies
         run: |
           julia --project=docs -e '
@@ -23,7 +27,8 @@ jobs:
             Pkg.instantiate()
             Pkg.build()
             Pkg.precompile()'
-      - name: Build and deploy
+      
+      - name: Build and deploy documentation
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
