--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -19,17 +19,20 @@ jobs:
           version: '1'
           show-versioninfo: true
       
-      - name: Add NSDEBase from GitHub
-        run: julia --project=docs -e 'using Pkg; Pkg.add(url="https://github.com/giancarloantonucci/NSDEBase.jl"); Pkg.instantiate()'
-      
       - name: Install dependencies
         run: |
           julia --project=docs -e '
             using Pkg
             Pkg.develop(PackageSpec(path=pwd()))
+            Pkg.add(url="https://github.com/giancarloantonucci/NSDEBase.jl")
             Pkg.instantiate()
             Pkg.build()
             Pkg.precompile()'
+
+      - name: Download Julia inventory
+        run: |
+          mkdir -p docs/inventories
+          curl -o docs/inventories/Julia.toml https://docs.julialang.org/en/v1/objects.inv
       
       - name: Build and deploy documentation
         env:
