--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,7 +1,7 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterInterLinks = "d12716ef-a0f6-4df4-a9f1-a5a34e75c656"
-NSDEBase = { url = "https://github.com/giancarloantonucci/NSDEBase.jl" }
+NSDEBase = "5aa61ba9-7752-4810-b2ec-484f26c3f007"
 
 [compat]
 Documenter = "1"
