--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -50,10 +50,11 @@ jobs:
         run: julia --project=@. -e 'using Pkg; Pkg.instantiate()'
 
       - name: Add NSDEBase from GitHub
-        run: julia --project=docs -e '
-          using Pkg
-          Pkg.add(url="https://github.com/giancarloantonucci/NSDEBase.jl")
-          Pkg.instantiate()'
+        run: |
+          julia --project=docs -e '
+            using Pkg
+            Pkg.add(url="https://github.com/giancarloantonucci/NSDEBase.jl")
+            Pkg.instantiate()'
         
       - name: Build package
         uses: julia-actions/julia-buildpkg@v1
