--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -53,6 +53,7 @@ jobs:
         run: |
           julia --project=docs -e '
             using Pkg
+            Pkg.rm("NSDEBase");
             Pkg.add(url="https://github.com/giancarloantonucci/NSDEBase.jl")
             Pkg.instantiate()'
         
