Add source for NSDEBase

--- a/Project.toml
+++ b/Project.toml
@@ -21,5 +21,8 @@ julia = "1.10, 1"
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
+[sources]
+NSDEBase = {url = "https://github.com/giancarloantonucci/NSDEBase.jl"}
+
 [targets]
 test = ["Test"]
