--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,7 @@ julia = "1.10, 1"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [sources]
-NSDEBase = { url = "https://github.com/giancarloantonucci/NSDEBase.jl", rev = "main" }
+NSDEBase = { url = "https://github.com/giancarloantonucci/NSDEBase.jl", rev = "master" }
 
 [targets]
 test = ["Test"]
