--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ ArrowMacros = "46a4b217-d1c8-4502-9c1a-7bf73a71908c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MakieCore = "20f20a25-4f0e-4fdf-b5d1-57303727442b"
 NSDEBase = "5aa61ba9-7752-4810-b2ec-484f26c3f007"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
@@ -21,8 +22,9 @@ julia = "1.10, 1"
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
-[sources]
-NSDEBase = { url = "https://github.com/giancarloantonucci/NSDEBase.jl", rev = "master" }
+[sources.NSDEBase]
+rev = "master"
+url = "https://github.com/giancarloantonucci/NSDEBase.jl"
 
 [targets]
 test = ["Test"]
