--- a/.github/workflows/Documenter.yml
+++ b/.github/workflows/Documenter.yml
@@ -23,12 +23,10 @@ jobs:
         run: |
           julia --project=docs -e '
             using Pkg
-            Pkg.develop(PackageSpec(path=pwd()))
             Pkg.rm("NSDEBase")
-            Pkg.add(url="https://github.com/giancarloantonucci/NSDEBase.jl")
-            Pkg.instantiate()
-            Pkg.build()
-            Pkg.precompile()'
+            Pkg.develop(PackageSpec(url="https://github.com/giancarloantonucci/NSDEBase.jl"))
+            Pkg.resolve()
+            Pkg.instantiate()'
       
       - name: Build and deploy documentation
         env:
