--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -5,6 +5,4 @@ NSDEBase = "5aa61ba9-7752-4810-b2ec-484f26c3f007"
 
 [compat]
 Documenter = "1"
-
-[sources]
-NSDEBase = { url = "https://github.com/giancarloantonucci/NSDEBase.jl", rev = "master" }
+DocumenterInterLinks = "1"
